--- a/VaccineC/package.json
+++ b/VaccineC/package.json
@@ -27,6 +27,8 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^9.0.0",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
