--- a/VaccineC/package.json
+++ b/VaccineC/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "angular2-color-picker": "^1.3.1",
     "bootstrap": "^5.2.0",
+    "chart.js": "^3.9.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^9.0.0",
