--- a/VaccineC/package.json
+++ b/VaccineC/package.json
@@ -26,8 +26,10 @@
     "angular2-color-picker": "^1.3.1",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ng2-charts": "^4.0.0",
     "ngx-bootstrap": "^9.0.0",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
@@ -39,6 +41,7 @@
     "@angular-devkit/build-angular": "^14.0.5",
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/chart.js": "^2.9.37",
     "@types/jasmine": "~4.0.0",
     "@types/jquery": "^3.5.14",
     "jasmine-core": "~4.1.0",
