--- a/VaccineC/package.json
+++ b/VaccineC/package.json
@@ -23,8 +23,15 @@
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fullcalendar/bootstrap5": "^5.11.2",
+    "@fullcalendar/core": "^6.0.0-beta.1",
+    "@fullcalendar/daygrid": "^6.0.0-beta.1",
+    "@fullcalendar/interaction": "^5.11.2",
+    "@fullcalendar/timegrid": "^5.11.2",
+    "@fullcalendar/web-component": "^6.0.0-beta.1",
     "angular2-color-picker": "^1.3.1",
     "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
     "chart.js": "^3.9.1",
     "chartjs-plugin-datalabels": "^2.1.0",
     "font-awesome": "^4.7.0",
