--- a/VaccineC/package.json
+++ b/VaccineC/package.json
@@ -29,6 +29,7 @@
     "@fullcalendar/interaction": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.2",
     "@fullcalendar/web-component": "^6.0.0-beta.1",
+    "@ngx-translate/core": "^14.0.0",
     "angular2-color-picker": "^1.3.1",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
@@ -41,6 +42,7 @@
     "ngx-mask": "^14.0.3",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
+    "rx-subject": "^3.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
