--- a/VaccineC/angular.json
+++ b/VaccineC/angular.json
@@ -100,7 +100,8 @@
               "./node_modules/@fullcalendar/common/main.css",
               "./node_modules/@fullcalendar/daygrid/main.css",
               "./node_modules/@fullcalendar/timegrid/main.css",
-              "./node_modules/@fullcalendar/list/main.css"
+              "./node_modules/@fullcalendar/list/main.css",
+              "./node_modules/ngx-loading-buttons/src/styles.css"
             ],
             "scripts": []
           }
