--- a/VaccineC/package.json
+++ b/VaccineC/package.json
@@ -39,6 +39,7 @@
     "jquery": "^3.6.0",
     "ng2-charts": "^4.0.0",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-loading-buttons": "^14.0.0",
     "ngx-mask": "^14.0.3",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
