--- a/VaccineC/package.json
+++ b/VaccineC/package.json
@@ -36,7 +36,9 @@
     "bootstrap-icons": "^1.9.1",
     "chart.js": "^3.9.1",
     "chartjs-plugin-datalabels": "^2.1.0",
+    "cpf-cnpj-validator": "^1.0.3",
     "font-awesome": "^4.7.0",
+    "joi": "^17.6.0",
     "jquery": "^3.6.0",
     "ng2-charts": "^4.0.0",
     "ngx-bootstrap": "^9.0.0",
