--- a/VaccineC/package.json
+++ b/VaccineC/package.json
@@ -25,11 +25,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fullcalendar/bootstrap5": "^5.11.2",
-    "@fullcalendar/core": "^6.0.0-beta.1",
-    "@fullcalendar/daygrid": "^6.0.0-beta.1",
-    "@fullcalendar/interaction": "^5.11.2",
-    "@fullcalendar/timegrid": "^5.11.2",
-    "@fullcalendar/web-component": "^6.0.0-beta.1",
+    "@fullcalendar/core": "6.0.0-beta.1",
+    "@fullcalendar/daygrid": "6.0.0-beta.1",
+    "@fullcalendar/interaction": "6.0.0-beta.1",
+    "@fullcalendar/list": "6.0.0-beta.1",
+    "@fullcalendar/timegrid": "6.0.0-beta.1",
+    "@fullcalendar/web-component": "6.0.0-beta.1",
     "@ngx-translate/core": "^14.0.0",
     "angular2-color-picker": "^1.3.1",
     "bootstrap": "^5.2.0",
