--- a/VaccineC/package.json
+++ b/VaccineC/package.json
@@ -32,6 +32,7 @@
     "@fullcalendar/list": "6.0.0-beta.1",
     "@fullcalendar/timegrid": "6.0.0-beta.1",
     "@fullcalendar/web-component": "6.0.0-beta.1",
+    "@ng-matero/extensions": "^14.4.1",
     "@ngx-translate/core": "^14.0.0",
     "angular2-color-picker": "^1.3.1",
     "bootstrap": "^5.2.0",
@@ -42,6 +43,7 @@
     "font-awesome": "^4.7.0",
     "joi": "^17.6.0",
     "jquery": "^3.6.0",
+    "ng-matero": "^14.1.0",
     "ng2-charts": "^4.0.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-loading-buttons": "^14.0.0",
